--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Demo</title>
+        <title>Ally Demo</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css" />
     </head>
@@ -16,11 +16,11 @@
                <button @click="toggleAvatar">Switch Picture</button>
            </div>
            <div id="demo-2">
-                <button 
-                class="btn" 
-                :class="{'btn-success': buttonGreen}" 
-                @click="toggleButton">   
-                    I am a Button
+                <button
+                class="btn"
+                :class="{'btn-success': buttonGreen}"
+                @click="toggleButton">
+                    I am a Ally fave button
                 </button>
            </div>
            <!-- <div id="demo-3">
@@ -29,7 +29,7 @@
                    <task v-for="task in tasks">{{ task }}</task>
                </ul>
            </div> -->
-            <div id="demo-4">               
+            <div id="demo-4">
                <task-list></task-list>
            </div>
         </div>
